add repository url to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "@drift-js/drift",
     "version": "0.0.1",
     "description": "A simple framework for building web applications",
+    "repository": "https://github.com/drift-js/drift",
     "main": "./dist/index.mjs",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
