--- a/package.json
+++ b/package.json
@@ -1,42 +1,35 @@
 {
     "name": "@drift-js/drift",
-    "version": "0.0.1",
+    "version": "0.0.8",
     "description": "A simple framework for building web applications",
     "repository": "https://github.com/drift-js/drift",
-    "main": "./dist/index.mjs",
+    "main": "./dist/index.cjs",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
     "scripts": {
-        "dev": "tsup --format cjs,esm --dts --watch",
-        "build": "tsup --format cjs,esm --dts",
+        "dev": "unbuild --watch",
+        "build": "unbuild",
         "start:example": "bun run examples/basic/index.ts",
         "dev:example": "bun run --watch examples/basic/index.ts"
     },
     "exports": {
         "./package.json": "./package.json",
         ".": {
-            "require": "./dist/index.cjs",
             "import": "./dist/index.mjs",
+            "require": "./dist/index.cjs",
             "types": "./dist/index.d.ts"
-        },
-        "./validation/arktype": {
-            "require": "./dist/arktype.cjs",
-            "import": "./dist/arktype.mjs",
-            "types": "./dist/arktype.d.ts"
-        },
-        "./middleware": {
-            "require": "./dist/middleware.cjs",
-            "import": "./dist/middleware.mjs",
-            "types": "./dist/middleware.d.ts"
         }
     },
+    "files": [
+        "dist"
+    ],
     "keywords": [],
     "license": "ISC",
     "devDependencies": {
         "@changesets/cli": "^2.27.8",
         "@types/bun": "^1.1.10",
         "arktype": "2.0.0-rc.13",
-        "tsup": "^8.3.0",
-        "typescript": "^5.6.2"
+        "typescript": "^5.6.2",
+        "unbuild": "^2.0.0"
     }
 }
