--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "@drift-js/drift",
-    "version": "0.0.11",
+    "version": "0.0.12",
     "description": "A simple framework for building web applications",
     "repository": "https://github.com/drift-js/drift",
+    "type": "module",
     "main": "./dist/index.cjs",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
@@ -18,6 +19,16 @@
             "import": "./dist/index.mjs",
             "require": "./dist/index.cjs",
             "types": "./dist/index.d.ts"
+        },
+        "./validation/arktype": {
+            "import": "./dist/validation/arktype.mjs",
+            "require": "./dist/validation/arktype.cjs",
+            "types": "./dist/validation/arktype.d.ts"
+        },
+        "./middleware": {
+            "import": "./dist/middleware/index.mjs",
+            "require": "./dist/middleware/index.cjs",
+            "types": "./dist/middleware/index.d.ts"
         }
     },
     "files": [
